--- a/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
@@ -420,7 +420,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:layout_margin="12dp"
+                        android:layout_marginVertical="12dp"
                         app:cardCornerRadius="@dimen/margin_card_16dp"
                         android:elevation="5dp"
                         android:id="@+id/cardview_mainscore2"
@@ -478,7 +478,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:layout_margin="12dp"
+                        android:layout_marginVertical="12dp"
                         app:cardCornerRadius="@dimen/margin_card_16dp"
                         android:elevation="5dp"
                         android:id="@+id/cardview_mainscore3"
