--- a/app/src/main/res/layout/activity_mind_audit_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_result.xml
@@ -597,7 +597,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_card_16dp"
                             android:gravity="center_vertical">
-
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:src="@drawable/icon_arrow_article"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="@dimen/margin_card_16dp"
+                                android:layout_height="wrap_content"
+                                app:tint="@color/txt_color_journal_date" />
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -659,6 +665,7 @@
                                 android:layout_margin="@dimen/margin_card_16dp"
                                 android:layout_below="@+id/tv_main_score_happiness"
                                 android:fontFamily="@font/dmsans_regular"
+                                android:visibility="gone"
                                 android:textSize="14sp" />
                         </RelativeLayout>
 
