--- a/app/src/main/res/layout/activity_new_sleep_sound.xml
+++ b/app/src/main/res/layout/activity_new_sleep_sound.xml
@@ -202,6 +202,7 @@
             android:orientation="vertical"
             android:gravity="center"
             android:id="@+id/ll_no_data"
+            android:visibility="gone"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
