--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -268,6 +268,7 @@
                                     android:layout_width="12dp"
                                     android:layout_height="12dp"
                                     android:layout_centerVertical="true"
+                                    android:scaleType="fitXY"
                                     android:src="@drawable/video_jump_back_in" />
 
                                 <TextView
@@ -390,6 +391,7 @@
                                             android:layout_width="12dp"
                                             android:layout_height="12dp"
                                             android:layout_centerVertical="true"
+                                            android:scaleType="fitXY"
                                             android:src="@drawable/video_jump_back_in" />
 
                                         <TextView
@@ -545,6 +547,7 @@
                                             android:layout_width="12dp"
                                             android:layout_height="12dp"
                                             android:layout_centerVertical="true"
+                                            android:scaleType="fitXY"
                                             android:src="@drawable/video_jump_back_in" />
 
                                         <TextView
