Following issues are resolved on 13 Oct 2025 1. RAD-4646: Android>QA(120)ThinkRight>Journalling>bullet >options missing on the option screen 2. RAD-4851: [Android][QA][Home] Header should be fixed when scrolling 3. RAD-4852: [Android][QA][My Health] Header should be fixed when scrolling in My Health tab

--- a/app/src/main/res/layout/fragment_home_dashboard.xml
+++ b/app/src/main/res/layout/fragment_home_dashboard.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#F7F7F7"
-    android:layout_marginHorizontal="16dp">
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginBottom="16dp">
 
     <TextView
         android:id="@+id/tv_date_dashboard"
