--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#F7F7F7"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginBottom="16dp">
 
     <ScrollView
         android:id="@+id/scrollView"
