DOWNLOAD implemented in subsciption history adapter

--- a/app/src/main/res/layout/row_subscription_history.xml
+++ b/app/src/main/res/layout/row_subscription_history.xml
@@ -18,6 +18,7 @@
             android:layout_alignTop="@+id/trialEnds"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_download_pastsub"
+            android:id="@+id/img_download"
             android:visibility="visible" />
 
         <TextView
