--- a/app/src/main/res/layout/activity_freeform.xml
+++ b/app/src/main/res/layout/activity_freeform.xml
@@ -35,9 +35,10 @@
 
         <ImageButton
             android:id="@+id/btnInfo"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/info_affirmation"
+            android:padding="5dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
