--- a/app/src/main/res/layout/activity_healthcam_basic_details_new.xml
+++ b/app/src/main/res/layout/activity_healthcam_basic_details_new.xml
@@ -27,7 +27,7 @@
             android:text="Your Details"
             android:textSize="18sp"
             android:gravity="center"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind" />
     </LinearLayout>
 
@@ -63,7 +63,7 @@
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="textPersonName"
                 android:textSize="16sp"
                 android:imeOptions="actionNext"
@@ -92,7 +92,7 @@
                 android:paddingHorizontal="16dp"
                 android:textSize="16sp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:cursorVisible="false"
                 android:focusable="false"
@@ -122,7 +122,7 @@
                 android:layout_marginTop="4dp"
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:focusable="false"
                 android:textSize="16sp"
@@ -154,7 +154,7 @@
                 android:paddingHorizontal="16dp"
                 android:textSize="16sp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:focusable="false"
                 android:cursorVisible="false"
@@ -196,7 +196,7 @@
                 android:textSize="16sp"
                 android:paddingEnd="8dp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:focusable="false"
                 android:cursorVisible="false"
@@ -235,7 +235,7 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="8dp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:cursorVisible="false"
                 android:focusable="false"
@@ -268,7 +268,7 @@
                 android:paddingEnd="8dp"
                 android:cursorVisible="false"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:focusable="false"
                 android:hint="Select An Option"
@@ -299,7 +299,7 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="8dp"
                 android:background="@drawable/bg_gray_border"
-                android:backgroundTint="@color/settings_bg_color"
+                android:backgroundTint="@color/color_item_background"
                 android:inputType="text"
                 android:focusable="false"
                 android:hint="Select An Option"
