--- a/app/src/main/res/layout/disclaimer_common_dialog.xml
+++ b/app/src/main/res/layout/disclaimer_common_dialog.xml
@@ -41,6 +41,7 @@
         android:textSize="14sp"
         android:fontFamily="@font/dmsans_regular"
         android:layout_marginTop="16dp"
+        android:lineSpacingExtra="1dp"
         android:textColor="@color/txt_color_header"
         android:textAlignment="center"
         android:text="This facial scan is intended to improve your awareness of general wellness. It does not diagnose, treat or mitigate any disease, disorder or abnormal physical state. Please consult with a healthcare professional or emergency services if you believe you have a medical emergency." />
@@ -52,7 +53,7 @@
         android:text="Okay"
         android:textColor="@color/white"
         android:fontFamily="@font/dmsans_bold"
-        android:layout_marginVertical="16dp"
+        android:layout_marginVertical="24dp"
         android:layout_marginHorizontal="8dp"
         android:textSize="16sp"
         android:background="@drawable/button_background_filled"
