--- a/app/src/main/res/layout/layout_seriesepisodelist_item.xml
+++ b/app/src/main/res/layout/layout_seriesepisodelist_item.xml
@@ -183,6 +183,7 @@
                 android:layout_width="1dp"
                 android:layout_height="16dp"
                 android:layout_marginHorizontal="8dp"
+                android:id="@+id/view_time_separator"
                 android:background="@color/text_color_char_left" />
             <TextView
                 android:id="@+id/tv_time"
