bug fixes of eat right

--- a/app/src/main/res/layout/fragment_workout_analytics.xml
+++ b/app/src/main/res/layout/fragment_workout_analytics.xml
@@ -39,7 +39,8 @@
             android:id="@+id/yourHeartRateZone"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/awesome_progressbaricon"
+            android:scaleType="fitXY"
+            android:src="@drawable/infocircle"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
