--- a/app/src/main/res/layout/fragment_edit_workout_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_workout_bottom_sheet.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete Workout"
-        android:textSize="20dp"
-        android:layout_marginTop="28dp"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
         android:textColor="@color/black"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -25,8 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:textColor="@color/black"
-        android:fontFamily="@font/dmsans_bold"
-        android:textSize="18dp"
+        android:fontFamily="@font/dmsans_regular"
+        android:textSize="18sp"
         android:text="Are you sure you want to delete this workout entry?"
         app:layout_constraintTop_toBottomOf="@+id/delete_workout_heading"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +35,9 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="20dp"
-        android:weightSum="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/delete_workout_description"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,13 +45,12 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/yes_btn_bottom_sheet"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:layout_weight="1"
             android:orientation="horizontal"
-            android:background="@drawable/background_yes_bottom"
+            android:background="@drawable/add_cart_button_background"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:gravity="center"
             >
             <TextView
@@ -64,7 +62,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_gravity="center"
                 android:textSize="20sp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:fontFamily="@font/dmsans_bold"
                 android:text="Yes"/>
 
@@ -72,12 +70,12 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/layout_btn_log_meal"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:layout_weight="1"
             android:orientation="horizontal"
-            android:background="@drawable/add_cart_button_background"
-            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/background_yes_bottom"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:gravity="center"
             >
@@ -103,7 +101,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_gravity="center"
                 android:textSize="20sp"
-                android:textColor="@color/white"
+                android:textColor="@color/txt_color_journal_date"
                 android:fontFamily="@font/dmsans_bold"
                 android:text="No"/>
 
