--- a/app/src/main/res/layout/fragment_meal_scan_results.xml
+++ b/app/src/main/res/layout/fragment_meal_scan_results.xml
@@ -351,7 +351,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view_macro" />
 
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -368,27 +367,28 @@
                     android:id="@+id/layoutMicroTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="596dp"
                     android:layout_marginEnd="10dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:orientation="horizontal">
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_micro_meal_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:textSize="14sp"
                         android:fontFamily="@font/dmsans_bold"
+                        android:text="Micro Nutrients Breakdown"
                         android:textColor="@color/meal_log_title"
-                        android:text="Micro Nutrients Breakdown" />
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
                         android:id="@+id/microUP"
@@ -396,9 +396,9 @@
                         android:layout_height="16dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="8dp"
-                        android:visibility="visible"
                         android:scaleType="center"
                         android:src="@drawable/ic_up"
+                        android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -411,7 +411,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:background="@color/view_border"
-                    app:layout_constraintTop_toBottomOf="@+id/layoutMicroTitle"></View>
+                    app:layout_constraintTop_toBottomOf="@+id/layoutMicroTitle">
+                </View>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_micro_item"
@@ -1030,8 +1031,8 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textSize="14sp"
-                android:textColor="@color/meal_log_title"
-                android:fontFamily="@font/dmsans_bold"
+                android:textColor="@color/text_color_kcal"
+                android:fontFamily="@font/dmsans_regular"
                 android:text="Save Meal" />
 
             <CheckBox
