--- a/app/src/main/res/layout/grid_layout_ai.xml
+++ b/app/src/main/res/layout/grid_layout_ai.xml
@@ -15,145 +15,156 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-<ImageView
-    android:id="@+id/item_image"
-    android:layout_width="26dp"
-    android:layout_height="26dp"
-    android:layout_marginStart="12dp"
-    android:layout_marginTop="13dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/item_image"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="13dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-<TextView
-    android:id="@+id/item_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textStyle="bold"
-    android:textSize="16sp"
-    android:textColor="@color/black"
-    android:layout_marginStart="5dp"
-    app:layout_constraintBottom_toBottomOf="@+id/item_image"
-    app:layout_constraintStart_toEndOf="@+id/item_image" />
+        <TextView
+            android:id="@+id/item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/item_image"
+            app:layout_constraintStart_toEndOf="@+id/item_image" />
 
-<ImageView
-    android:layout_width="24dp"
-    android:layout_height="24dp"
-    android:src="@drawable/forwardicon"
-    android:layout_marginTop="14dp"
-    android:layout_marginEnd="12dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/forwardicon"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-<TextView
-    android:id="@+id/lastSevenDayTv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Last 7 days"
-    android:textSize="12dp"
-    android:textColor="@color/active_text_color"
-    android:layout_marginStart="12dp"
-android:layout_marginTop="74dp"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/lastSevenDayTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Last 7 days"
+            android:textSize="12sp"
+            android:textColor="@color/active_text_color"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="74dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/border_line"
-    android:layout_marginTop="60dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/border_line"
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-<com.jetsynthesys.rightlife.ai_package.ui.moveright.graphs.LineGraphView
-    android:id="@+id/line_graph"
-    android:layout_width="140dp"
-android:visibility="gone"
-android:layout_height="36dp"
-android:layout_marginTop="101dp"
-android:layout_marginStart="12dp"
-android:layout_marginEnd="12dp"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent" />
+        <com.jetsynthesys.rightlife.ai_package.ui.moveright.graphs.LineGraphView
+            android:id="@+id/line_graph"
+            android:layout_width="140dp"
+            android:visibility="gone"
+            android:layout_height="36dp"
+            android:layout_marginTop="101dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-<com.jetsynthesys.rightlife.ai_package.ui.moveright.graphs.BarGraphView
-    android:id="@+id/BarGraphView"
-    android:layout_width="140dp"
-android:layout_height="36dp"
-android:visibility="gone"
-android:layout_marginTop="101dp"
-android:layout_marginStart="12dp"
-android:layout_marginEnd="12dp"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent" />
+        <com.jetsynthesys.rightlife.ai_package.ui.moveright.graphs.BarGraphView
+            android:id="@+id/BarGraphView"
+            android:layout_width="140dp"
+            android:layout_height="36dp"
+            android:visibility="gone"
+            android:layout_marginTop="101dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-<View
-    android:id="@+id/view"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/border_line"
-    android:layout_marginTop="160dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/border_line"
+            android:layout_marginTop="160dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-<TextView
-    android:id="@+id/rating"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="64"
-    android:textSize="24dp"
-    android:textColor="@color/black"
-    android:textStyle="bold"
-    android:layout_marginTop="167dp"
-    android:layout_marginStart="12dp"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="167dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-<TextView
-    android:id="@+id/unit_rating"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="bpm"
-    android:textSize="12dp"
-    android:textColor="@color/black"
-    android:textStyle="bold"
-    android:layout_marginTop="167dp"
-    app:layout_constraintStart_toEndOf="@+id/rating"
-    app:layout_constraintBottom_toBottomOf="@+id/rating" />
+            <TextView
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="64"
+                android:textSize="24sp"
+                android:textColor="@color/black_no_meals"
+                android:fontFamily="@font/dmsans_bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-<TextView
-    android:id="@+id/todayTv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Today"
-    android:layout_marginTop="174dp"
-    android:textSize="14dp"
-    android:textStyle="bold"
-    android:textColor="@color/black"
-    android:layout_marginEnd="12dp"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/unit_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="bpm"
+                android:textSize="12sp"
+                android:textColor="@color/active_text_color"
+                android:fontFamily="@font/dmsans_regular"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@+id/rating"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/rating" />
 
-<TextView
-    android:id="@+id/no_data_cardview"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textColor="@color/black"
-    android:visibility="gone"
-    android:text="No Data"
-    android:textStyle="bold"
-    android:textSize="22dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+            <TextView
+                android:id="@+id/todayTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Today"
+                android:textSize="14sp"
+                android:fontFamily="@font/dmsans_semibold"
+                android:textColor="@color/workout_textcolor"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/no_data_cardview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            android:text="No Data"
+            android:textStyle="bold"
+            android:textSize="22dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
