--- a/app/src/main/res/layout/fragment_average_heart_rate.xml
+++ b/app/src/main/res/layout/fragment_average_heart_rate.xml
@@ -19,6 +19,7 @@
             android:layout_height="25dp"
             android:src="@drawable/back"
             android:layout_marginStart="22dp"
+            android:layout_marginBottom="3dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -29,7 +30,7 @@
             android:textSize="25dp"
             android:textStyle="bold"
             android:textColor="@color/text_color"
-            android:layout_marginBottom="3dp"
+           android:fontFamily="@font/merriweather_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -210,6 +211,7 @@
                         android:text=" Bpm"
                         android:textSize="12sp"
                         android:fontFamily="@font/dmsans_bold"
+                        android:layout_marginBottom="3dp"
                         app:layout_constraintBottom_toBottomOf="@+id/average_number"
                         app:layout_constraintStart_toEndOf="@+id/average_number" />
 
