--- a/app/src/main/res/layout/fragment_burn.xml
+++ b/app/src/main/res/layout/fragment_burn.xml
@@ -20,6 +20,7 @@
             android:layout_height="25dp"
             android:src="@drawable/back"
             android:layout_marginStart="22dp"
+            android:layout_marginBottom="3dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -30,7 +31,7 @@
             android:textSize="25dp"
             android:textStyle="bold"
             android:textColor="@color/text_color"
-            android:layout_marginBottom="3dp"
+           android:fontFamily="@font/merriweather_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -220,6 +221,7 @@
                         android:layout_height="wrap_content"
                         android:text=" kCal"
                         android:textSize="12sp"
+                        android:layout_marginBottom="3dp"
                         android:textColor="@color/black_no_meals"
                         android:fontFamily="@font/dmsans_regular"
                         app:layout_constraintBottom_toBottomOf="@+id/averageBurnCalorie"
