--- a/app/src/main/res/layout/fragment_create_routine.xml
+++ b/app/src/main/res/layout/fragment_create_routine.xml
@@ -44,7 +44,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="20sp"
                     android:textColor="@color/text_color"
-                    android:fontFamily="@font/dmsans_bold"
+                    android:fontFamily="@font/merriweather_bold"
                     android:layout_marginTop="20dp"
                     android:text="Create Routines"/>
                 <ImageView
