--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -401,6 +401,7 @@
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <TextView
+                                android:id="@+id/heading_top"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Calorie Balance"
@@ -419,6 +420,15 @@
                                 android:layout_marginEnd="20dp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
+                            <View
+                                android:id="@+id/view_border_line_top"
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_marginTop="10dp"
+                                android:background="@color/border_line"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/heading_top" />
 
                             <View
                                 android:id="@+id/horizontal_dotted_green"
@@ -1129,6 +1139,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/heading_steps"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Steps"
@@ -1148,6 +1159,15 @@
                             android:layout_marginEnd="20dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+                        <View
+                            android:id="@+id/view_border_line_top_steps"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/border_line"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/heading_steps" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/stepNoDataLayout"
@@ -1359,7 +1379,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Goal"
                                 android:textSize="12sp"
-                                android:layout_marginEnd="20dp"
+                                android:layout_marginEnd="40dp"
                                 android:textStyle="bold"
                                 android:textColor="@color/goal_text_color"
                                 android:layout_marginTop="291dp"
@@ -1381,7 +1401,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/last_steps"
-                                android:layout_marginEnd="20dp"
+                                android:layout_marginEnd="35dp"
                                 android:text=" Steps"
                                 android:textSize="12sp"
                                 android:textColor="@color/goal_text_color"
@@ -1447,6 +1467,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/active_heart_rate_heading"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Active Heart Rate Zones"
@@ -1465,6 +1486,15 @@
                             android:layout_marginEnd="20dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+                        <View
+                            android:id="@+id/view_border_line_top_active_heart_rate"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/border_line"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/active_heart_rate_heading" />
 
                         <TextView
                             android:id="@+id/heartRateZoneNoDataTv"
