--- a/app/src/main/res/layout/item_your_workouts_ai.xml
+++ b/app/src/main/res/layout/item_your_workouts_ai.xml
@@ -20,9 +20,9 @@
 
         <ImageView
             android:id="@+id/main_heading_icon"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:scaleType="fitCenter"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:scaleType="fitXY"
             android:layout_marginEnd="5dp"
             android:src="@drawable/workout_function_icon"
             app:layout_constraintEnd_toStartOf="@+id/tv_meal_title"
