Following issues are resolved on 15 Oct 2025 1. RAD-4483: [Android][QA][Checklist]Checklist – Unlock Your Sleep & Mind Insights Screen Text Size Not as per Design 2. RAD-4757: [Android][QA][Home] Incorrect forward icon in Jump Back section 3. RAD-4867: [Android][QA][Profile]Multiple height selection popups appear on tapping height field repeatedly in Profile section 4. RAD-4370: [Android][QA][Explore]App Crash When Accessing Explore Sections After Free Trial Expiry

--- a/app/src/main/res/layout/fragment_emotions_past_week.xml
+++ b/app/src/main/res/layout/fragment_emotions_past_week.xml
@@ -14,7 +14,7 @@
         android:fontFamily="@font/merriweather_bold"
         android:text="How have your emotions been over the past week?"
         android:textColor="@color/menu_icon_color_unselected"
-        android:textSize="@dimen/textsize_large18sp" />
+        android:textSize="22sp" />
 
 
     <androidx.cardview.widget.CardView
