--- a/app/src/main/res/layout/layout_disclaimer_facescan_result.xml
+++ b/app/src/main/res/layout/layout_disclaimer_facescan_result.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/dialog_text"
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:text="This facial scan is intended to improve your awareness of general wellness. It does not diagnose, treat or mitigate any disease, disorder or abnormal physical state. Please consult with a healthcare professional or emergency services if you believe you have a medical emergency."
+                android:text="This Face scan is intended to improve your awareness of general wellness. It does not diagnose, treat or mitigate any disease, disorder or abnormal physical state. Please consult with a healthcare professional or emergency services if you believe you have a medical emergency."
                 android:textColor="@color/txt_color_mind"
                 android:gravity="center"
                 android:paddingStart="@dimen/margin_card_16dp"
