--- a/app/src/main/res/layout/disclaimer_common_dialog.xml
+++ b/app/src/main/res/layout/disclaimer_common_dialog.xml
@@ -44,7 +44,7 @@
         android:lineSpacingExtra="1dp"
         android:textColor="@color/txt_color_header"
         android:textAlignment="center"
-        android:text="This facial scan is intended to improve your awareness of general wellness. It does not diagnose, treat or mitigate any disease, disorder or abnormal physical state. Please consult with a healthcare professional or emergency services if you believe you have a medical emergency." />
+        android:text="This Face scan is intended to improve your awareness of general wellness. It does not diagnose, treat or mitigate any disease, disorder or abnormal physical state. Please consult with a healthcare professional or emergency services if you believe you have a medical emergency." />
 
     <Button
         android:id="@+id/btnOkay"
