--- a/app/src/main/res/layout/fragment_exercise_preference.xml
+++ b/app/src/main/res/layout/fragment_exercise_preference.xml
@@ -29,7 +29,8 @@
             android:layout_margin="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_edittext_gray">
+            android:background="@drawable/rounded_corder_border_gray_radius_small"
+            android:backgroundTint="#F2F2F2">
 
             <EditText
                 android:id="@+id/inputTimes"
