--- a/app/src/main/res/layout/fragment_serving.xml
+++ b/app/src/main/res/layout/fragment_serving.xml
@@ -31,8 +31,8 @@
         android:layout_marginTop="8dp">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/rlpage_info_icon"
             android:layout_marginEnd="8dp"
             app:tint="@color/questionnaire_green" />
@@ -41,8 +41,9 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="If you had roti and sabzi for lunch, that portion of sabzi (250g) is considered as 1 serving of vegetables in a day."
-            android:textSize="12sp"
+            android:text="a bowl of sabzi (~200g) is counted as 1 serving of veggies"
+            android:textSize="14sp"
+            android:layout_marginStart="5dp"
             android:fontFamily="@font/dmsans_regular"
             android:textColor="@color/txt_color_header"/>
 
