Following issues are resolved on 15 Oct 2025 1. RAD-4433: Android || QA-117 || checklist || After completing profile questionnaire user is redirecting on incorrect screen, redirecting on Home screen instead of My Health. 2. RAD-4688: [Android][QA][Onboarding] Video thumbnail not rendering properly under Rightlife Edit 3. RAD-4690: [Android][QA][Onboarding] Artist name overflow not handled in Rightlife Edit 4. RAD-4593: [Android][QA][Onboarding] No toast message appears when fewer than two options are selected.

--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -239,7 +239,6 @@
                                 android:id="@+id/img_rledit"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
-                                android:scaleType="centerCrop"
                                 android:adjustViewBounds="true"
                                 android:src="@drawable/img_rledittop" />
 
@@ -437,12 +436,12 @@
 
                                         <TextView
                                             android:id="@+id/nameeditor1"
-                                            android:layout_width="wrap_content"
+                                            android:layout_width="90dp"
                                             android:layout_height="wrap_content"
                                             android:layout_centerVertical="true"
                                             android:fontFamily="@font/dmsans_regular"
                                             android:text="Ventak swami muthu "
-                                            android:maxLength="16"
+                                            android:maxLines="1"
                                             android:ellipsize="end"
                                             android:textAlignment="textStart"
                                             android:textColor="#0B1215"
@@ -593,12 +592,12 @@
 
                                         <TextView
                                             android:id="@+id/nameeditor2"
-                                            android:layout_width="wrap_content"
+                                            android:layout_width="90dp"
                                             android:layout_height="wrap_content"
                                             android:layout_centerVertical="true"
                                             android:fontFamily="@font/dmsans_regular"
-                                            android:text="Ventak swami muthu  "
-                                            android:maxLength="16"
+                                            android:text="Ventak swami muthu"
+                                            android:maxLines="1"
                                             android:ellipsize="end"
                                             android:textAlignment="textStart"
                                             android:textColor="#0B1215"
